--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harbor City Event Staff | Professional Event Staffing in New York Metropolitan Area</title>
+    
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
     <meta name="description" content="Premier event staffing for weddings, corporate events, and private parties in New York Metropolitan Area. Professional servers and bartenders." />
     
-    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Harbor City Event Staff | Professional Event Staffing" />
     <meta property="og:description" content="Premier event staffing for weddings, corporate events, and private parties in New York Metropolitan Area." />
     <meta property="og:image" content="/attached_assets/hero_image.png" />
 
-    <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="Harbor City Event Staff" />
     <meta property="twitter:description" content="Premier event staffing for weddings, corporate events, and private parties in Jersey City, Hoboken, Bayonne, and Hudson County." />
     <meta property="twitter:image" content="/attached_assets/hero_image.png" />
 
-    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Montserrat:wght@400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
